--- a/src/styles/blog.module.css
+++ b/src/styles/blog.module.css
@@ -43,6 +43,7 @@
   align-items: center;
   flex-direction: column;
   border: 1px solid var(--text-color);
+  width: 100%;
 }
 
 .tile > p, .tile > h3{
